--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "WILD-SSR",
   "version": "1.0.0",
-  "description": "vvild 小野 换弹雾化烟 去除焦油，真烟口感，雾量澎湃，拿起即吸。",
+  "description": "vvild 小野领先的雾化换弹电子烟，去除焦油，真烟口感，雾量澎湃，拿起即吸。小野虽好，小野一下就好。",
   "author": "heichenxuan",
   "keywords": [
-    "vvild,vvild小野,小野电子烟,vvild小野电子烟,vvild电子烟,小野减害雾化电子烟,vvild雾化烟,小野雾化烟,vvild小野雾化烟,罗永浩"
+    "vvild,vvild小野,小野电子烟,vvild电子烟,小野雾化烟,罗永浩电子烟,一次性电子烟,悦刻电子烟,juul电子烟,iqos电子烟,一次性电子烟"
   ],
   "private": false,
   "scripts": {
