--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vvild 小野领先的雾化换弹电子烟，去除焦油，真烟口感，雾量澎湃，拿起即吸。不要那么野，小野一下就好。",
   "author": "heichenxuan",
   "keywords": [
-    "vvild,vvild小野,小野电子烟,vvild电子烟,小野雾化烟,罗永浩电子烟,一次性电子烟,悦刻电子烟,juul电子烟,iqos电子烟,一次性电子烟"
+    "vvild,vvild小野,小野电子烟,vvild电子烟,小野雾化烟,罗永浩电子烟,陈冠希,一次性电子烟,悦刻电子烟,juul电子烟,iqos电子烟,一次性电子烟"
   ],
   "private": false,
   "scripts": {
