--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^2.6.5",
     "cross-env": "^5.2.0",
     "koa": "^2.6.2",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "eslint-config-prettier": "^3.1.0",
